<resources>
    <string name="app_name">ESRC</string>

    <string name="prompt_name">본인의 이름을 입력해주세요.</string>
    <string name="prompt_school">Ex) 강남고등학교</string>
    <string name="prompt_class">Ex) 3</string>
    <string name="prompt_age">Ex) 18</string>
    <string name="action_sign_in">회원 등록</string>
    <string name="action_next_step">다음으로</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Main Activity -->
    <string name="main_facebox_text">
        Please look ahead without movement
    </string>

    <string name="main_facebox_image_desc">
        FaceBoxImage
    </string>

    <string name="main_basic_facial_expression_title_text">
        Facial Exp.(7T)
    </string>

    <string name="main_basic_facial_expression_image_desc">
        Facial Exp.(7T)
    </string>

    <string name="basic_facial_expression_val_text">

    </string>

    <string name="main_valence_facial_expression_title_text">
        Facial Exp.(3T)
    </string>

    <string name="main_valence_facial_expression_image_desc">
        Facial Exp.(3T)
    </string>

    <string name="valence_facial_expression_val_text">

    </string>

    <string name="main_attention_title_text">
        Attention
    </string>

    <string name="main_hr_title_text">
        Heart Rate
    </string>

    <string name="main_hr_unit_text">
        bpm
    </string>

    <string name="main_hrv_title_text">
        HRV-SDNN
    </string>

    <string name="main_hrv_unit_text">
        ms
    </string>

    <string name="main_engagement_title_text">
        Engagement
    </string>

    <string name="main_engagement_unit_text">
        %
    </string>

</resources>